--- a/FixITPagliu/app/src/main/res/layout/activity_register.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_register.xml
@@ -7,10 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
+
     <TextView
         android:id="@+id/registrazioneText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="15dp"
         android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,9 +29,48 @@
         android:hint="Nome"
         android:layout_below="@id/registrazioneText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         tools:layout_editor_absoluteX="100dp"
         tools:layout_editor_absoluteY="191dp" />
+
+    <EditText
+        android:id="@+id/cognomeRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nomeRegister"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Cognome"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="191dp" />
+
+
+    <EditText
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/Birthday"
+        android:layout_below="@id/cognomeRegister"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:clickable="true"
+        android:editable="false"
+        android:hint="DD/MM/YYYY"
+        />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/Birthday"
+        android:id="@+id/codiceFiscale"
+        android:hint="Codice Fiscale"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="191dp"/>
 
     <EditText
         android:id="@+id/emailRegister"
@@ -39,11 +79,21 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="e-Mail"
-        android:layout_below="@id/nomeRegister"
+        android:layout_below="@id/codiceFiscale"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         tools:layout_editor_absoluteX="102dp"
         tools:layout_editor_absoluteY="265dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/username"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Username"
+        android:layout_below="@id/emailRegister"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/pswRegister"
@@ -51,21 +101,21 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:ems="10"
-        android:layout_below="@id/emailRegister"
+        android:layout_below="@id/username"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="100dp"
         tools:layout_editor_absoluteY="343dp" />
 
     <EditText
-        android:id="@+id/confirmPsw"
+        android:id="@+id/psWConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_below="@id/pswRegister"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:hint="@string/confermapsw"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="102dp"
@@ -76,20 +126,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confermareg"
-        android:layout_below="@id/confirmPsw"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_below="@id/psWConfirm"
+        android:layout_marginLeft="20dp"
+        android:layout_centerHorizontal="false"
+        android:layout_marginTop="15dp"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="514dp" />
 
     <Button
         android:id="@+id/signinActBtn"
-        android:layout_below="@id/signupBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/login"
-        android:layout_marginTop="20dp" />
+        android:layout_alignBaseline="@+id/signupBtn"
+        android:layout_alignRight="@+id/signupBtn"
+        android:layout_marginLeft="200dp"
+        android:layout_marginRight="-165dp"
+        android:text="@string/login" />
 
 
 </RelativeLayout>
