--- a/FixITPagliu/app/src/main/res/layout/activity_sender.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_sender.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="INVIO SEGNALAZIONe"
+        android:text="INVIO SEGNALAZIONE"
         tools:layout_editor_absoluteX="135dp"
         tools:layout_editor_absoluteY="356dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
