--- a/FixITPagliu/app/src/main/res/menu/drawer_menu.xml
+++ b/FixITPagliu/app/src/main/res/menu/drawer_menu.xml
@@ -24,11 +24,11 @@
                 <item
                     android:id="@+id/nav_statsreport"
                     android:icon="@drawable/ic_stats"
-                    android:title="@string/statistiche" />
+                    android:title="@string/statistiche_zona" />
                 <item
                     android:id="@+id/nav_mapReports"
                     android:icon="@drawable/ic_map"
-                    android:title="Mappa" />
+                    android:title="@string/territorio" />
                 <item
                     android:id="@+id/nav_news"
                     android:icon="@drawable/ic_news"
