--- a/FixITPagliu/app/src/main/res/layout/activity_map.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_map.xml
@@ -9,4 +9,11 @@
     tools:context=".user.LatestNews"
     tools:openDrawer="start">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="territorio sataellitare"
+        tools:layout_editor_absoluteX="177dp"
+        tools:layout_editor_absoluteY="360dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
