--- a/FixITPagliu/app/src/main/res/layout/activity_map.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_map.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".user.LatestNews"
-    tools:openDrawer="start">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <SearchView
+        android:id="@+id/svLocation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="territorio sataellitare"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="360dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_round"
+        android:elevation="5dp"
+        android:iconifiedByDefault="false"
+        android:queryHint="Cerca luogo..." />
+
+    <fragment
+        android:id="@+id/mapFrag"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        android:layout_below="@+id/svLocation" />
+
+</RelativeLayout>
