--- a/FixITPagliu/app/src/main/res/layout/activity_sendreport.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_sendreport.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,71 +12,140 @@
         android:id="@+id/oggettoEdit"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:hint="Oggetto" />
+        android:backgroundTint="#FF85de9d"
+        android:hint="@string/oggetto"
+        android:maxLines="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" tools:targetApi="lollipop"/>
 
     <EditText
         android:id="@+id/dataEdit"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/oggettoEdit"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#FF85de9d"
         android:focusable="false"
-        android:hint="Data" />
+        android:hint="@string/data"
+        app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintTop_toBottomOf="@+id/oggettoEdit" />
 
     <EditText
         android:id="@+id/timeEdit"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/oggettoEdit"
-        android:layout_alignRight="@+id/dataEdit"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="-200dp"
+        android:backgroundTint="#FF85de9d"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
+
         android:focusable="false"
-        android:hint="Orario" />
+        android:hint="@string/orario"
+        app:layout_constraintLeft_toRightOf="@id/dataEdit"
+        app:layout_constraintTop_toBottomOf="@id/oggettoEdit"
+        tools:layout_editor_absoluteX="320dp"
+        tools:layout_editor_absoluteY="85dp" />
 
     <EditText
         android:id="@+id/placeEdit"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dataEdit"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:focusable="false"
-        android:hint="Posizione" />
+        android:backgroundTint="#FF85de9d"
+        android:focusable="true"
+        android:hint="@string/posizione"
+        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintTop_toBottomOf="@+id/dataEdit" />
+
+    <Button
+        android:id="@+id/getCoordsBtn"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="85dp"
+        android:background="@drawable/ic_location"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
+        app:layout_constraintLeft_toRightOf="@+id/placeEdit"
+        app:layout_constraintTop_toBottomOf="@+id/oggettoEdit"
+        tools:layout_editor_absoluteX="336dp"
+        tools:layout_editor_absoluteY="150dp" />
 
     <EditText
         android:id="@+id/descriptionEdit"
         android:layout_width="350dp"
-        android:layout_height="250dp"
-        android:layout_below="@id/placeEdit"
-        android:layout_centerHorizontal="true"
+        android:layout_height="200dp"
         android:layout_marginTop="20dp"
-        android:background="@android:color/darker_gray"
-        android:hint="Descrizione della problematica" />
+        android:background="#FF85de9d"
+        android:gravity="top"
+        android:hint="@string/descrizione_della_problematica"
+        android:textColor="#000000"
+        app:layout_constraintLeft_toLeftOf="@id/oggettoEdit"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
+        app:layout_constraintTop_toBottomOf="@id/placeEdit" />
 
     <Button
         android:id="@+id/typeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/descriptionEdit"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="36dp"
         android:background="@android:color/darker_gray"
         android:onClick="showTipo"
-        android:text="@string/tipologia_segnalazione" />
-
+        android:text="@string/tipo"
+        app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionEdit" />
 
     <CheckBox
         android:id="@+id/socialCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/descriptionEdit"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/social" />
+        android:layout_marginStart="260dp"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="32dp"
+        android:buttonTint="#FF85de9d"
+        android:text="@string/social"
+        app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionEdit" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/allegato"
+        android:textColor="#000000"
+        app:layout_constraintLeft_toLeftOf="@+id/allegatoImg"
+        app:layout_constraintTop_toBottomOf="@id/socialCheck" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/allegatoImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="260dp"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ic_allegato"
+        android:onClick="loadAttachment"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/socialCheck" />
+
+    <Button
+        android:id="@+id/inviaSegnBtn"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="#e3594f"
+        android:text="@string/invia_segnalazione"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
+
+        app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintTop_toBottomOf="@+id/typeButton" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
