--- a/FixITPagliu/app/src/main/res/layout/activity_news.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_news.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    tools:context=".user.LatestNews">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        class="androidx.appcompat.app.AlertController$RecycleListView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="dati testuali"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="320dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:scrollbars="vertical" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
