--- a/FixITPagliu/app/src/main/res/layout/report_open.xml
+++ b/FixITPagliu/app/src/main/res/layout/report_open.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/missing_object"
         android:textColor="#ff5e5e"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,15 +32,17 @@
         android:layout_height="wrap_content"
         android:text="@string/missing_id"
         android:textColor="#396b99"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/repObject"
-        app:layout_constraintTop_toBottomOf="@+id/repObject" />
+        app:layout_constraintTop_toBottomOf="@+id/repObject"
+        android:onClick="openChat"/>
 
     <TextView
         android:id="@+id/repDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="@string/missing_date"
         android:textColor="#000000"
@@ -49,5 +51,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UnknownIdInLayout" />
+
+    <TextView
+        android:id="@+id/repDesc"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:text="@string/missing_desc"
+        app:layout_constraintLeft_toLeftOf="@id/repID"
+        app:layout_constraintTop_toBottomOf="@id/repID" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
