--- a/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
+    tools:context=".user.UserMenu"
     tools:openDrawer="start">
 
     <com.google.android.material.navigation.NavigationView
@@ -15,12 +15,13 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/header"
-        app:menu="@menu/drawer_menu">
+        app:menu="@menu/drawer_menu_user">
     </com.google.android.material.navigation.NavigationView>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="wrap_content"
         android:background="#fff7f8" />
 
