--- a/FixITPagliu/app/src/main/res/values/colors.xml
+++ b/FixITPagliu/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
 
 
     <color name="colorPrimary">#ea474a</color>
-    <color name="colorPrimaryDark">#cf2a2d</color>
+    <color name="colorPrimaryEmployee">#e3c240</color>
+
+    <color name="colorPrimaryDark">#cf2a2d</color>1
     <color name="colorAccent">#1e344b</color>
 
     <color name="colorBackground">#f9f9fa</color>
