--- a/FixITPagliu/app/src/main/res/layout/activity_closed_reports.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_closed_reports.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.reports.ClosedReports">
+    tools:context=".user.report.ClosedReports">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerClosedReports"
