--- a/FixITPagliu/app/src/main/res/layout/activity_sendreport.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_sendreport.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <EditText
         android:id="@+id/oggettoEdit"
@@ -15,11 +14,12 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#FF85de9d"
         android:hint="@string/oggetto"
+        android:importantForAutofill="no"
         android:maxLines="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" tools:targetApi="lollipop"/>
+        tools:targetApi="lollipop" />
 
     <EditText
         android:id="@+id/dataEdit"
@@ -40,11 +40,11 @@
         android:layout_marginLeft="80dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#FF85de9d"
-        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
-
         android:focusable="false"
+
         android:hint="@string/orario"
         app:layout_constraintLeft_toRightOf="@id/dataEdit"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
         app:layout_constraintTop_toBottomOf="@id/oggettoEdit"
         tools:layout_editor_absoluteX="320dp"
         tools:layout_editor_absoluteY="85dp" />
@@ -67,8 +67,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="85dp"
         android:background="@drawable/ic_location"
-        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
         app:layout_constraintLeft_toRightOf="@+id/placeEdit"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
         app:layout_constraintTop_toBottomOf="@+id/oggettoEdit"
         tools:layout_editor_absoluteX="336dp"
         tools:layout_editor_absoluteY="150dp" />
@@ -122,19 +122,19 @@
         app:layout_constraintLeft_toLeftOf="@+id/allegatoImg"
         app:layout_constraintTop_toBottomOf="@id/socialCheck" />
 
-    <ImageView
-        android:id="@+id/allegatoImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="260dp"
-        android:layout_marginLeft="260dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/ic_allegato"
-        android:onClick="loadAttachment"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/socialCheck" />
+    <!--<ImageView
+       android:id="@+id/allegatoImg"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="260dp"
+       android:layout_marginLeft="260dp"
+       android:layout_marginTop="8dp"
+       android:background="@drawable/ic_allegato"
+      android:onClick="loadAttachment"  to fix quando farai l'allegato
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/socialCheck" /> -->
 
     <Button
         android:id="@+id/inviaSegnBtn"
@@ -143,9 +143,8 @@
         android:layout_marginTop="40dp"
         android:background="#e3594f"
         android:text="@string/invia_segnalazione"
-        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
-
         app:layout_constraintLeft_toLeftOf="@+id/oggettoEdit"
+        app:layout_constraintRight_toRightOf="@id/oggettoEdit"
         app:layout_constraintTop_toBottomOf="@+id/typeButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
